packages/frontend/src/app/pages/leaderboard-page/leaderboard-page.component.scss
.page {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  margin-bottom: 5rem;
}

.mat-column-points {
  text-align: right;
  justify-content: flex-end;
}

.mat-column-perfectGuessCount {
  text-align: right;
  justify-content: flex-end;
}

.profile-image {
  width: 5rem;
  height: 5rem;
  border-radius: 50%;
  object-fit: cover;
}

.channel-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}


.card {
  display: flex;
  flex-direction: column;
  align-items: left;
  gap: 0.2rem;
  box-sizing: border-box;
  padding: 1rem;
  border-radius: 8px;
}

.search-bar {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.user-result {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-self: center;
  gap: 0.2rem;
  background-color: var(--accent-background);
  box-sizing: border-box;
  padding: 1rem;
  border-radius: 8px;
}

.no-data {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  text-align: center;
  padding: 2rem;
}

.twitch-link {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;

  mat-icon {
    font-size: 1.2rem;
    height: 1.2rem;
    width: 1.2rem;
  }

  margin-bottom: 1rem;
}

